# order-otus

./: .env  .gitignore  OTUS-order.postman_collection.json  README.md  pyproject.toml
.docker/: .env  Dockerfile  docker-compose-dev.yml
.helm/order-otus/: Chart.yaml  values.yaml
.helm/order-otus/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yml  migration-job.yml  service.yaml  serviceaccount.yaml
.helm/order-otus/templates/tests/: test-connection.yaml
alembic/: env.py
alembic/versions/: 407249cb3d27_initial.py  6ab78ab06cf5_initial.py  c852702ccb67_initial.py
src/: config.py  main.py
src/orders/: models.py  router.py  schemas.py
